<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project Goob</string>
    <string name="action_settings">Settings</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="edit_alarms">Edit Alarms</string>
    <string name="title_activity_add_alarm">AddAlarmActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="show_message_title">My Message</string>
    <string name="title_activity_math">MathActivity</string>
    <string name="math_problem">Click Generate to Start!</string>
    <string name="answer_here">Enter answer here!</string>
    <string name="answer">Answer!</string>
    <string name="generate">Generate Problem</string>
    <string name="scoreField">Score: </string>
    <string name="scoreNum">0</string>
    <string name="multField">Multiplier: </string>
    <string name="multNum">1X</string>
    <string name="title_activity_alarm_list">AlarmList</string>
    <string name="title_activity_alarm_list_viewer">AlarmListViewer</string>

</resources>